platform/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly Payroll Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Periodic Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Per Payroll Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Weekly and Semi-Monthly Per Payroll Fees</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Equipment_Size__c</fullName>
        <label>Equipment Size</label>
        <picklist>
            <picklistValues>
                <fullName>20&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>37&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>43&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>46&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>47&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>49&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>52&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90&quot;</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Equipment_Technology__c</fullName>
        <label>Equipment Technology</label>
        <picklist>
            <picklistValues>
                <fullName>LCD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plasma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVD / VCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NUC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FWI_Player_Name__c</fullName>
        <description>New field to record FWI Player Name to cross reference with content manager.</description>
        <inlineHelpText>New field to record FWI Player Name to cross reference with content manager.</inlineHelpText>
        <label>FWI Player Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Unit Description</label>
        <picklist>
            <picklistValues>
                <fullName>Each</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Benefit Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per EE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Live Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Participant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Payroll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Install_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Install Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Equipment</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maint_Duration_Years__c</fullName>
        <label>Maint Duration (Years)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maint_End_Date__c</fullName>
        <label>Maint End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <picklist>
            <picklistValues>
                <fullName>Coby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insignia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nexcom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panasonic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samsung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seneca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sharp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sony</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toshiba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Westinghouse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Per_Payroll_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Per Payroll Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Player_AU_to_Charge__c</fullName>
        <description>Special AU to charge for players identified.</description>
        <inlineHelpText>Special AU to charge for players identified.</inlineHelpText>
        <label>Player AU to Charge</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial__c</fullName>
        <label>Serial #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>